# ReAct_agent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  experiment.ipynb  fix_notebook_date_typo.py  main.py  pyproject.toml  requirements.txt  verify_integration.py
.github/workflows/: deploy.yml
agent/: bot.py
api/: server.py
ref/: script.js  style.css
scripts/: setup_notion_databases.py  test_agent.py
static/: index.html  script.js  style.css
tools/: dummy.py  notion_calendar.py  notion_calender.py  notion_notes.py  weather.py
utils/: logger.py
