[project]
name = "react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.126.0",
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.0",
    "notebook>=7.5.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
